tests/paczka1/fuzzy1/77241126.err
Error in line 10: pOYzj3Ga S298 38,2
Error in line 21: pOYzj3Ga A388 28,8
Error in line 26: sY6k S410 51,6
